<resources>
    <string name="app_name" translatable="false">TP 1</string>
    <string name="form_title">Disponibiltés</string>

    <!-- Strings used for fragments for navigation -->

    <string name="departure_label">Ville de départ:</string>
    <string name="arrival_label">Ville de d\'arrivée:</string>
    <string name="search_button_label">Voir les horaires disponibles ></string>
    <string name="departure_hint">Ex: Montpellier...</string>
    <string name="arrival_hint">Ex: Paris...</string>
    <string name="back">Retour</string>
    <string name="from_label">De:</string>
    <string name="to_label">A:</string>


</resources>